Fixed bug on small width devices

--- a/public/css/aaa.css
+++ b/public/css/aaa.css
@@ -102,7 +102,7 @@ a.about {
 .post-li .img-container {
   min-height:100px;
   float:left;
-  width:20%;
+  width:30%;
   
   max-width:200px;
   margin:10px;
@@ -150,7 +150,7 @@ a.about {
 
 @media (max-width: 48em) {
   html {
-    font-size:16px;
+    font-size:15px;
   }
   .content {
     padding-top:1rem;
@@ -172,9 +172,17 @@ a.about {
   }
 
   .sidebar {
-    scroll:inherit;
+    scroll:initial;
+    padding:1rem 1rem;
+  }
+
+  a.about {
+    display:none;
+  }
+
+  .sidebar h1 {
     
   }
-  
+
 }
 
